Business_Bot/04-networking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: business-bot-service
  namespace: default
spec:
  selector:
    app: business-bot-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
