Business_Bot/04-networking/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: business-bot-ingress
  namespace: businessbot
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`business-bot.ikigais.app`)
      kind: Rule
      services:
        - name: whatsapp-gateway-microservice-base-service
          port: 80
